--- a/about.html
+++ b/about.html
@@ -31,38 +31,33 @@
 </head>
 
 <body>
-    <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
+
 
     <!-- header-start -->
     <header>
         <div class="header-area ">
             <div class="header-top_area d-none d-lg-block">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
                         <div class="col-xl-5 col-md-5 ">
                             <div class="header_left">
-                                <p>Welcome to Conbusi consulting service</p>
+                                <p>Welcome to real estate</p>
                             </div>
                         </div>
                         <div class="col-xl-7 col-md-7">
                             <div class="header_right d-flex">
                                 <div class="short_contact_list">
                                     <ul>
-                                        <li><a href="#"> <i class="fa fa-envelope"></i> info@docmed.com</a></li>
-                                        <li><a href="#"> <i class="fa fa-phone"></i> 1601-609 6780</a></li>
+                                        <li><a href="#"> <i class="fa fa-envelope"></i> info@realestategoa.com</a></li>
+                                        <li><a href="#"> <i class="fa fa-phone"></i>91 905 965 7894</a></li>
                                     </ul>
                                 </div>
                                 <div class="social_media_links">
                                     <a href="#">
-                                        <i class="fa fa-linkedin"></i>
+                                        <i class="fa fa-instagram"></i>
                                     </a>
                                     <a href="#">
                                         <i class="fa fa-facebook"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-google-plus"></i>
                                     </a>
                                 </div>
                             </div>
@@ -72,7 +67,7 @@
                 </div>
             </div>
             <div id="sticky-header" class="main-header-area">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="header_bottom_border">
                         <div class="row align-items-center">
                             <div class="col-xl-3 col-lg-2">
@@ -86,21 +81,9 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">home</a></li>
-                                            <li><a class="active" href="#">pages <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="about.html">about</a></li>
-                                                    <li><a href="property_details.html">property details</a></li>
-                                                    <li><a href="elements.html">elements</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a  href="index.html">home</a></li>
+                                            <li><a class="active" href="about.html">about</a></li>
                                             <li><a href="Property.html">Property</a></li>
-                                            <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="blog.html">blog</a></li>
-                                                    <li><a href="single-blog.html">single-blog</a></li>
-                                                </ul>
-                                            </li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
@@ -108,18 +91,13 @@
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
-                                    <div class="search_btn">
-                                        <a href="#">
-                                            <i class="ti-search"></i>
-                                        </a>
-                                    </div>
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="#">Add Property</a>
+                                        <a href="#">Contact Us</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12">
-                                <div class="mobile_menu d-block d-lg-none"></div>
+                                <div class="mobile_menu  d-lg-none"></div>
                             </div>
                         </div>
                     </div>
