--- a/index.html
+++ b/index.html
@@ -25,45 +25,37 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
-
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
 <body>
-    <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
 
     <!-- header-start -->
     <header>
         <div class="header-area ">
             <div class="header-top_area d-none d-lg-block">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
                         <div class="col-xl-5 col-md-5 ">
                             <div class="header_left">
-                                <p>Welcome to Conbusi consulting service</p>
+                                <p>Welcome to real estate</p>
                             </div>
                         </div>
                         <div class="col-xl-7 col-md-7">
                             <div class="header_right d-flex">
                                 <div class="short_contact_list">
                                     <ul>
-                                        <li><a href="#"> <i class="fa fa-envelope"></i> info@docmed.com</a></li>
-                                        <li><a href="#"> <i class="fa fa-phone"></i> 1601-609 6780</a></li>
+                                        <li><a href="#"> <i class="fa fa-envelope"></i> info@realestategoa.com</a></li>
+                                        <li><a href="#"> <i class="fa fa-phone"></i>91 905 965 7894</a></li>
                                     </ul>
                                 </div>
                                 <div class="social_media_links">
                                     <a href="#">
-                                        <i class="fa fa-linkedin"></i>
+                                        <i class="fa fa-instagram"></i>
                                     </a>
                                     <a href="#">
                                         <i class="fa fa-facebook"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-google-plus"></i>
                                     </a>
                                 </div>
                             </div>
@@ -73,7 +65,7 @@
                 </div>
             </div>
             <div id="sticky-header" class="main-header-area">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="header_bottom_border">
                         <div class="row align-items-center">
                             <div class="col-xl-3 col-lg-2">
@@ -89,23 +81,7 @@
                                         <ul id="navigation">
                                             <li><a class="active" href="index.html">home</a></li>
                                             <li><a href="about.html">about</a></li>
-
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="about.html">about</a></li>
-                                                    <li><a href="property_details.html">property details</a></li>
-                                                    <li><a href="details.html">property details</a></li>
-
-                                                    <li><a href="elements.html">elements</a></li>
-                                                </ul>
-                                            </li>
                                             <li><a href="Property.html">Property</a></li>
-                                            <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="blog.html">blog</a></li>
-                                                    <li><a href="single-blog.html">single-blog</a></li>
-                                                </ul>
-                                            </li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
@@ -114,7 +90,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="#">Schedule a visit</a>
+                                        <a href="#">Contact Us</a>
                                     </div>
                                 </div>
                             </div>
@@ -131,44 +107,27 @@
     <!-- header-end -->
 
     <!-- slider_area_start -->
-    <div class="slider_area">
-        <div class="single_slider  d-flex align-items-center slider_bg_1">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-xl-10 offset-xl-1">
-                        <div class="slider_text text-center justify-content-center">
-                            <h3>Find your best Property</h3>
-                            <p>Esteem spirit temper too say adieus who direct esteem.</p>
+    <div class="container-fluid">
+        <div class="col-xl-12 col-md-12">
+            <div class="slider_area">
+                <div class="single_slider  d-flex align-items-center slider_bg_1">
+                    <div class="container">
+                        <div class="row align-items-center">
+                            <div class="col-xl-10 offset-xl-1">
+                                <div class="slider_text text-center justify-content-center">
+                                    <h3>Find your best Property</h3>
+                                    <p>Esteem spirit temper too say adieus who direct esteem.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- slider_area_end -->
 
-    <!-- popular_property  -->
-    <div class="popular_property">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title mb-38 mt-31 text-center">
-                        <span class="opacity-text text-uppercase center">FEATURED PROPERTY</span>
-                        <h2 class="uppercase mb-25">FEATURED PROPERTY</h2>
-                        <p>All of our featured property of this month are include</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="more_property_btn text-center">
-                        <a href="#" class="boxed-btn3-line">More Properties</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /popular_property  -->
     <!--::apartment_part end::-->
     <div class="apartment_part">
         <div class="container">
@@ -177,11 +136,6 @@
                 <div class="section_tittle">
                     <h1>Provide The <br>
                     Beautiful Apartment</h1>
-                </div>
-            </div>
-            <div class="col-md-4 col-lg-5">
-                <div class="view_more_btn float-right d-none d-md-block">
-                    <a href="#" class="btn_2">Read More <span class="ti-arrow-right"></span></a>
                 </div>
             </div>
         </div>
@@ -247,6 +201,13 @@
                         <li><a href=""><span class="flaticon-frame"></span></a>  2400 sqft</li>
                     </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="more_property_btn text-center">
+                    <a href="#" class="boxed-btn3-line">More Properties</a>
                 </div>
             </div>
         </div>
@@ -570,12 +531,12 @@
     <div class="contact_action_area">
         <div class="container">
             <div class="row">
-                <div class="col-xl-7">
+                <div class="col-xl-9">
                     <div class="action_heading">
-                        <h3>Add your property for sale</h3>
+                        <h3>How to Become Easy and Flexible to Living in Los Angles. Get A Comfortable Appartment in Budget.</h3>
                     </div>
                 </div>
-                <div class="col-xl-5">
+                <div class="col-xl-3">
                     <div class="call_add_action">
                         <a href="#" class="boxed-btn3-line">Contact Us</a>
                     </div>
